--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
     <h1>Press any key to start!</h1>
     <div><img src="assets/img1.png" alt="computer"></div>
     <div class="controls">
-        <button class="btn ctrl" id="bcef">bcef</button>
-        <button class="btn ctrl" id="b">b</button>
-        <button class="btn ctrl" id="c">c</button>
-        <button class="btn ctrl" id="e">e</button>
-        <button class="btn ctrl" id="d">d</button>
-        <button class="btn ctrl" id="f">f</button>
+        <!-- <button class="btn ctrl" id="bcef">bcef</button> -->
+        <button class="btn ctrl" id="b">B</button>
+        <button class="btn ctrl" id="c">C</button>
+        <button class="btn ctrl" id="e">E</button>
+        <button class="btn ctrl" id="d">D</button>
+        <button class="btn ctrl" id="f">F</button>
     </div>
+    <label class="switch">
+        <input type="checkbox" id="check">
+        <span class="slider round"></span>
+    </label>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="game.js"></script>
 </body>
