--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
         <button class="btn ctrl" id="d">D</button>
         <button class="btn ctrl" id="f">F</button>
     </div>
+    <div>
     <label class="switch">
-        <input type="checkbox" id="check">
+        <input type="checkbox" id="check" checked>
         <span class="slider round"></span>
     </label>
+    <span id="icon"><img src="assets/sound-on.png"></img></span>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="game.js"></script>
 </body>
