--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>Press any key to start!</h1>
-    <div><img src="assets/img1.png" alt="computer"></div>
+    <div><img src="assets/img1.png" alt="computer" id="main"></div>
     <div class="controls">
         <!-- <button class="btn ctrl" id="bcef">bcef</button> -->
         <button class="btn ctrl" id="b">B</button>
@@ -25,7 +25,12 @@
         <input type="checkbox" id="check" checked>
         <span class="slider round"></span>
     </label>
-    <span id="icon"><img src="assets/sound-on.png"></img></span>
+    <span id="icon"><img src="assets/sound-on.png" id="img"></img></span>
+    <label class="switch">
+        <input type="checkbox" id="game" checked>
+        <span class="slider round"></span>
+    </label>
+    <span class="icon">Game mode</span>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="game.js"></script>
