--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </label>
     <span id="icon"><img src="assets/sound-on.png" id="img"></img></span>
     <label class="switch">
-        <input type="checkbox" id="game" checked>
+        <input type="checkbox" id="game">
         <span class="slider round"></span>
     </label>
     <span class="icon">Game mode</span>
